# my-skills

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  main.py  mypy.ini  obsidian-cli.skill  obsidian-interweave-engine.skill  obsidian-notebooklm-bases-manager.skill  obsidian-token-budget-guard.skill  obsidian-zettel-manager.skill  pyproject.toml  qmd.skill  what-is-a-concept-map.excalidraw.md
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
obsidian-cli/: SKILL.md
obsidian-exercise-kind-manager/: SKILL.md
obsidian-interweave-engine/: SKILL.md
obsidian-key-dates-base-manager/: SKILL.md
obsidian-notebooklm-bases-manager/: SKILL.md
obsidian-planetary-tasks-manager/: SKILL.md
obsidian-portfolio-holdings-manager/: SKILL.md
obsidian-weekly-feedback-loop/: SKILL.md
pipeline/: README.md  __init__.py  pipeline_composer.py  pipeline_composer_cli.py
scripts/: check_anthropic_compliance.py  check_public_repo_guardrails.sh  check_skill_artifacts.py  check_skill_dependencies.py  config.py  install_codex_user_skills.py  models.py  skill_test_harness.py
skills/: bootstrapping-autoresearch  build-excalidraw-from-code  excalidraw-hub-and-spoke-from-script  game-theory-engine.skill  jira-sprint-sync  obsidian-agent-memory-capture  obsidian-base-engine  obsidian-brokerage-activity-manager  obsidian-cli  obsidian-cv-entry-manager  obsidian-excalidraw-drawing-manager  obsidian-excalidraw-file-generation  obsidian-excalidraw-svg-pipeline  obsidian-excalidraw-visual-validator  obsidian-exercise-kind-manager  obsidian-experiment-kind-manager  qmd  (+14 more)
(+310 files in other folders)
