[project]
name = "my-skills"
version = "0.1.0"
description = "Reusable AI skill registry tooling and validation scripts."
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.25.1,<5",
    "polars>=1.30.0,<2",
    "pydantic>=2.11.0,<3",
    "PyYAML>=6.0.2,<7",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.18.0,<2",
    "pytest>=8.4.0,<9",
    "types-jsonschema>=4.24.0.20251010,<5",
    "types-PyYAML>=6.0.12.20250915,<7",
]

[tool.uv]
package = false
